ResourceRegistry.toJarInternalURI: added method to create URIs defining resources within a jar file URI. use the new method in other classes now ModelValidator has now ctor with empty parameter list.